# sphermonics

./: BinghamConstant.hs  BinghamTable.hs  SphericalHarmonics.hs  sledge.cabal  sphermonics.cabal
Harmonics/: BaseFunctions.hs
SH/: Pyramid.hs  Rotation.hs  SupportFunctions.hs
profile/: Main.hs
src/Texture/: BinghamConstant.hs  SphericalHarmonics.hs
src/Texture/SH/: Harmonics.hs  Pyramid.hs  Rotation.hs  RotationSO3.hs  RotationSO4.hs  SupportFunctions.hs
tablegen/: Main.hs
