name:           sphermonics
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
license:        GPL-3
license-file:   LICENSE
maintainer:     Edgar Gomes de Araujo
stability:      experimental
homepage:
package-url:
bug-reports:    talktoedgar@gmail.com
synopsis:       Basic tools for texture in polycrystal materials
description:    Texture representation by Spherical Harmonics.
category:       Math
author:         Edgar Gomes de Araujo

Flag test
    Description:        Build the exectable using command line.
    Default:            False

Flag tablegen
    Description:        Build the exectable for Spherical Hamonics coefcient tables.
    Default:            False

Executable tablegen
    main-is:           Main.hs
    if flag(tablegen)
       build-depends:  sphermonics
                     , base                 == 4.*
                     , sledge               >= 0.4
                     , vector               >= 0.10
                     , containers           >= 0.4.2.1
                     , unordered-containers >= 0.2
                     , optparse-applicative >= 0.5
                     , binary               >= 0.7

       hs-source-dirs: tablegen

       ghc-options:
                       -Wall
                       -O2
                       -rtsopts
                       -funbox-strict-fields
                       -threaded
                       -- -eventlog
                       -auto-all
                       -caf-all

       Buildable:      True
    else
       Buildable:      False

Executable sphermonics-profile
    main-is:           Main.hs
    if flag(test)
       build-depends: sphermonics
                     , sledge               >= 0.4
                     , optparse-applicative >= 0.5
                     , hammer               >= 0.4
                     , queryforest          >= 0.1
                     , array                >= 0.4
                     , base                 == 4.*
                     , vector               >= 0.10
                     , random               >= 1.0
                     , hmatrix              >= 0.15
                     , unordered-containers >= 0.2
                     , QuickCheck           >= 2.5
                     , time                 >= 1.4.2

       hs-source-dirs: profile

       ghc-options:
                       -Wall
                       -O2
                       -rtsopts
                       -funbox-strict-fields
                       -threaded
                       -- -eventlog
                       -auto-all
                       -caf-all

       Buildable:      True
    else
       Buildable:      False

Library
  build-depends:  base                    == 4.*
                , sledge                  >= 0.4
                , hammer                  >= 0.4
                , array                   >= 0.4
                , containers              >= 0.4.2.1
                , unordered-containers    >= 0.2
                , vector                  >= 0.10
                , binary                  >= 0.7
                , vector-binary-instances >= 0.2
                , primitive               >= 0.5
                , parallel                >= 3.0
                , deepseq                 >= 1.2
                , hmatrix                 >= 0.15
                , gamma                   >= 0.9

  exposed-modules:  Texture.SphericalHarmonics
  other-modules:    Texture.SH.Harmonics
                    Texture.SH.SupportFunctions
                    Texture.SH.Pyramid
                    Texture.SH.RotationSO3
                    Texture.SH.RotationSO4
                    Texture.SH.Rotation

  exposed:        True
  buildable:      True
  hs-source-dirs: src
  ghc-options:    -O2
                  -rtsopts
                  -Wall
                  -funbox-strict-fields
                  -threaded
                  -- -eventlog
                  -auto-all
                  -caf-all
